--- a/hr-worker/src/main/resources/application.properties
+++ b/hr-worker/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.datasource.password=
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-test.config=${hr-worker.properties}
+#test.config=${hr-worker.properties}
